syntax = "proto3";
package service.stripe;

option go_package = "generated/stripe-service";

service StripeService {
  rpc GetStripeCustomerId(GetStripeCustomerIdRequest) returns (GetStripeCustomerIdResponse);
  rpc SetStripeCustomerId(SetStripeCustomerIdRequest) returns (Empty);
  rpc GetUserId(GetUserIdRequest) returns (GetUserIdResponse);
  rpc GetPendingTransfer(GetPendingTransferRequest) returns (GetPendingTransferResponse);
  rpc PostPendingTransfer(PostPendingTransferRequest) returns (Empty);
  rpc CreateAndPostTransfer(CreateAndPostTransferRequest) returns (Empty);
  rpc VoidPendingTransfer(VoidPendingTransferRequest) returns (Empty);
  rpc CreatePendingTransfer(CreatePendingTransferRequest) returns (Empty);
}

message CreatePendingTransferRequest {
  string user_id = 1;
  string stripe_payment_intent_id = 2;
  string stripe_customer_id = 3;
  string amount = 4;
}

message GetPendingTransferRequest {
  string stripe_payment_intent_id = 1;
}

message GetPendingTransferResponse {
  string tigerbeetle_transfer_id = 1;
  string user_id                 = 2;
}

message PostPendingTransferRequest {
  string tigerbeetle_transfer_id = 1;
  string user_id                 = 2;
  string amount                  = 3;
}

message CreateAndPostTransferRequest {
  string user_id                  = 1;
  string amount                   = 2;
  string stripe_payment_intent_id = 3;
  string stripe_customer_id       = 4;
}

message VoidPendingTransferRequest {
  string tigerbeetle_transfer_id = 1;
  string user_id                 = 2;
  string amount                  = 3;
}

message SetStripeCustomerIdRequest {
  string user_id            = 1;
  string stripe_customer_id = 2;
}

message GetStripeCustomerIdRequest {
  string user_id = 1;
}

message GetStripeCustomerIdResponse {
  string stripe_customer_id = 1;
}

message GetUserIdRequest {
  string stripe_customer_id = 1;
}

message GetUserIdResponse {
  string user_id = 1;
}

message Empty {}